<resources>
    <string name="app_name">Duce</string>
    <string name="finder_title">Finder</string>
    <string name="profile_title">Profile</string>
    <string name="chats_title">Chats</string>
    <string name="friends_title">Friends</string>
    <string name="duce">Duce</string>
    <string name="login_welcome">Welcome back</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="signup_welcome">Welcome to Duce</string>
    <string name="sp_country_prompt">"Select your Country"</string>
    <string name="sp_first_language_prompt">"Select your First Language"</string>
    <string name="basic_conversation">Hello! How are you?</string>
    <string name="username_sample_1">cristiano07</string>
    <string name="age_sample_1">38 years</string>
    <string name="description_sample">Hi! Call me to talk about soccer and cars</string>
    <string name="my_languages">My Languages</string>
    <string name="my_interests">My Interests</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language_demo">Mexican Sign Language</string>
    <string name="proficiency_demo">14</string>
    <string name="select_languages">Select Languages</string>
    <string name="sending_language">Sending Language</string>
    <string name="transcription_language">Transcription Language</string>
    <string name="save">Save</string>
    <string name="find_prompt">Find User</string>
    <string name="find_chats_prompt">Find Chats</string>
    <string name="flag_hint">POR</string>
    <string name="compose_message">Write a message</string>
    <string name="large_message_sample">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome back"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string-array name="languages_array">
        <item>Afrikaans</item>
        <item>Albanian</item>
        <item>American Sign Language</item>
        <item>Amharic</item>
        <item>Arabic (Egyptian Spoken)</item>
        <item>Arabic (Levantine)</item>
        <item>Arabic (Modern Standard)</item>
        <item>Arabic (Moroccan Spoken)</item>
        <item>Arabic</item>
        <item>Aramaic</item>
        <item>Armenian</item>
        <item>Assamese</item>
        <item>Aymara</item>
        <item>Azerbaijani</item>
        <item>Balochi</item>
        <item>Bamanankan</item>
        <item>Bashkort (Bashkir)</item>
        <item>Basque</item>
        <item>Belarusan</item>
        <item>Bengali</item>
        <item>Bhojpuri</item>
        <item>Bislama</item>
        <item>Bosnian</item>
        <item>Brahui</item>
        <item>British Sign Language</item>
        <item>Bulgarian</item>
        <item>Burmese</item>
        <item>Cantonese</item>
        <item>Catalan</item>
        <item>Cebuano</item>
        <item>Chechen</item>
        <item>Cherokee</item>
        <item>Chinese Sign Language</item>
        <item>Croatian</item>
        <item>Czech</item>
        <item>Dakota</item>
        <item>Danish</item>
        <item>Dari</item>
        <item>Dholuo</item>
        <item>DutchEnglish</item>
        <item>English</item>
        <item>Esperanto</item>
        <item>Estonian</item>
        <item>Éwé</item>
        <item>Finnish</item>
        <item>French</item>
        <item>French Sign Language</item>
        <item>Georgian</item>
        <item>German</item>
        <item>Gikuyu</item>
        <item>Greek</item>
        <item>Guarani</item>
        <item>Gujarati</item>
        <item>Haitian Creole</item>
        <item>Hausa</item>
        <item>Hawaiian</item>
        <item>Hawaiian Creole</item>
        <item>Hebrew</item>
        <item>Hiligaynon</item>
        <item>Hindi</item>
        <item>Hungarian</item>
        <item>Icelandic</item>
        <item>Igbo</item>
        <item>Indonesian (Bahasa Indonesia)</item>
        <item>Inuit/Inupiaq</item>
        <item>Irish Gaelic</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Japanese Sign Language</item>
        <item>Jarai</item>
        <item>Javanese</item>
        <item>K’iche’</item>
        <item>Kabyle</item>
        <item>Kannada</item>
        <item>Kashmiri</item>
        <item>Kazakh</item>
        <item>Khmer</item>
        <item>KhoekhoeKorean</item>
        <item>Kurdish</item>
        <item>Kyrgyz</item>
        <item>Lao</item>
        <item>Latin</item>
        <item>Latvian</item>
        <item>Lingala</item>
        <item>Lithuanian</item>
        <item>Macedonian</item>
        <item>Maithili</item>
        <item>Malagasy</item>
        <item>Malay (Bahasa Melayu)</item>
        <item>Malayalam</item>
        <item>Mandarin (Chinese)</item>
        <item>Marathi</item>
        <item>Mende</item>
        <item>Mexican Sign Language</item>
        <item>Mongolian</item>
        <item>Nahuatl</item>
        <item>Navajo</item>
        <item>Nepali</item>
        <item>Norwegian</item>
        <item>Ojibwa</item>
        <item>Oriya</item>
        <item>Oromo</item>
        <item>Pashto</item>
        <item>Persian</item>
        <item>Pidgin Signed English</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Punjabi</item>
        <item>Quechua</item>
        <item>Romani</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Rwanda</item>
        <item>Samoan</item>
        <item>Sanskrit</item>
        <item>SerbianShona</item>
        <item>Sindhi</item>
        <item>Sinhala</item>
        <item>Slovak</item>
        <item>Slovene</item>
        <item>Somali</item>
        <item>Spanish</item>
        <item>Swahili</item>
        <item>Swedish</item>
        <item>Tachelhit</item>
        <item>Tagalog</item>
        <item>Tajiki</item>
        <item>Tamil</item>
        <item>Tatar</item>
        <item>Telugu</item>
        <item>Thai</item>
        <item>Tibetic languages</item>
        <item>Tigrigna</item>
        <item>Tok Pisin</item>
        <item>Turkish</item>
        <item>Turkmen</item>
        <item>Ukrainian</item>
        <item>Urdu</item>
        <item>Uyghur</item>
        <item>Uzbek</item>
        <item>Vietnamese</item>
        <item>Warlpiri</item>
        <item>Welsh</item>
        <item>Wolof</item>
        <item>Xhosa</item>
        <item>Yakut</item>
        <item>Yiddish</item>
        <item>Yoruba</item>
        <item>Yucatec</item>
        <item>Zapotec</item>
        <item>Zulu</item>
    </string-array>
    <string name="receiving_language">I want to read incoming messages in...</string>
    <string name="select_first_language">Select First Language</string>
    <string name="select_interests">Select Languages you are interested in</string>
    <string name="password_help">Password must contain at least 8 characters</string>
    <string name="username_help">Username already exists</string>
    <string name="cancel">Cancel</string>
    <string name="select_language">Select a Language</string>
    <string name="select_a_language">Select a Language</string>
</resources>