<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/finder_navigation">

    <fragment
        android:id="@+id/finder_navigation"
        android:name="duce.fragments.FinderFragment"
        android:label="@string/finder_title"
        tools:layout="@layout/finder_fragment" />

    <fragment
        android:id="@+id/chats_navigation"
        android:name="duce.fragments.ChatsFragment"
        android:label="@string/chats_title"
        tools:layout="@layout/chats_fragment" />
    <fragment
        android:id="@+id/profile_navigation"
        android:name="duce.fragments.ProfileMainFragment"
        android:label="@string/profile_title"
        tools:layout="@layout/profile_main_fragment" />
</navigation>