<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    >

    <!-- Title of Dialog -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:text="@string/select_a_language"
        android:textColor="@color/black"
        android:textSize="25dp"
        />

    <!-- Select Language Text -->
    <TextView
        android:id="@+id/tvReceivingLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle"
        android:layout_margin="15dp"
        android:text="@string/receiving_language"
        android:textColor="@color/black"
        android:textSize="18dp"
        />

    <!-- Select Translated Language -->
    <TextView
        android:id="@+id/tvSelectLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvReceivingLanguage"
        android:layout_alignStart="@+id/tvReceivingLanguage"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:drawablePadding="16dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/select_language"
        android:drawableEnd="@android:drawable/arrow_down_float"
        android:background="@android:drawable/editbox_background"
        android:maxLines="3"
        />

    <!-- Cancel -->
    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSelectLanguage"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textSize="12dp"
        android:imeOptions="actionDone"
        android:text="@string/cancel"
        />

</RelativeLayout>