<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <!-- Profile Picture -->
        <ImageView
            android:id="@+id/ivProfilePicture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp"
            android:background="@android:color/darker_gray"
            tools:srcCompat="@tools:sample/avatars"
            />
        <!-- Username -->
        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ivProfilePicture"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:textSize="22dp"
            android:hint="@string/username_sample_1"
            />
        <!-- Age and Flat -->
        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvUsername"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:textSize="16dp"
            android:hint="@string/age_sample_1"
            />
        <!-- Description -->
        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvAge"
            android:layout_margin="15dp"
            android:layout_centerHorizontal="true"
            android:maxLines="2"
            android:hint="@string/description_sample"
            />
        <!-- My Languages -->
        <TextView
            android:id="@+id/tvMyLanguages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDescription"
            android:layout_marginTop="20dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:textSize="18dp"
            android:text="@string/my_languages"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMyLanguages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvMyLanguages"
            android:layout_alignStart="@+id/tvMyLanguages"
            android:layout_marginStart="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            />
        <!-- Language Interests -->
        <TextView
            android:id="@+id/tvLanguageInterests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rvMyLanguages"
            android:layout_marginTop="15dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:textSize="18dp"
            android:text="@string/my_interests"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLanguageInterests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLanguageInterests"
            android:layout_alignStart="@+id/tvLanguageInterests"
            android:layout_marginStart="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            />
        <!-- Edit Button -->
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnEditProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:src="@android:drawable/ic_menu_edit"
            android:contentDescription="@string/edit_profile"
            />
    </RelativeLayout>
</ScrollView>