<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="duce.StartActivity"
    >

    <!-- Layout Title -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:textSize="40dp"
        android:textColor="@color/black"
        android:text="@string/duce"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_centerVertical="true"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.45"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50121653"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline55"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.55"
            />

        <TextView
            android:id="@+id/tvToLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_login"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/honeydew"
            android:textSize="20dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline45"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="30dp"
            />

        <TextView
            android:id="@+id/tvToSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_signup"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/signup"
            android:textAlignment="center"
            android:textColor="@color/honeydew"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="@+id/guideline55"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="29dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>
